# triton_cdist

./: .flake8  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
tests/: correctness.py  performance.py
triton_cdist/: __init__.py  lp_reduce.py
