[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "triton_cdist"
authors = [
   {name = "Jinen Setpal", email = "jinen@setpal.net"},
]
description = "Triton Implementation of torch.cdist"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
version = "0.1"
dependencies = [
   "torch",
   "triton",
   "numpy",
]

[project.optional-dependencies]
benchmark = ["matplotlib", "pandas"]
